# augmented_reality

./: LICENSE  README.md
MarkerlessAR_V1/: CMakeLists.txt
MarkerlessAR_V1/src/: ARDrawingContext.cpp  ARDrawingContext.hpp  ARPipeline.cpp  ARPipeline.hpp  CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  GeometryTypes.cpp  GeometryTypes.hpp  Pattern.cpp  Pattern.hpp  PatternDetector.cpp  PatternDetector.hpp  main.cpp
MarkerlessAR_V2/src/: ARDrawingContext.cpp  ARDrawingContext.hpp  ARPipeline.cpp  ARPipeline.hpp  CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.hpp  DebugHelpers.hpp  GeometryTypes.cpp  GeometryTypes.hpp  Pattern.cpp  Pattern.hpp  PatternDetector.cpp  PatternDetector.hpp  main.cpp  objloader.cpp  texture.cpp  texture.hpp
